2015-08-03  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (cris_elf_relocate_section)
	(elf_cris_finish_dynamic_symbol, cris_elf_check_relocs)
	(elf_cris_discard_excess_dso_dynamics): Use SYMBOLIC_BIND, not
	just link_info->symbolic, to check if a symbol should be bound
	symbolically.

2015-07-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/18735
	* elflink.c (_bfd_elf_add_default_symbol): Add the default
	symbol if not performing a relocatable link.
	(elf_link_add_object_symbols): Adjust the default symbol if
	not performing a relocatable link.

2015-07-29  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (elf_link_add_object_symbols): Remove
	!info->relocatable check for info->executable.  Add
	!info->relocatable check for !info->executable.
	(elf_link_output_extsym): Remove
	!info->relocatable check for info->executable.

2015-07-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* mmo.c (mmo_write_symbols_and_terminator): Skip symbol-type
	assignment loop for bfd plugin objects.

2015-07-28  Alan Modra  <amodra@gmail.com>

	* elf.c (_bfd_elf_map_sections_to_segments): Do not make a new
	segment for loaded sections after nonloaded sections if the
	sections are on the same page.

2015-07-28  Iain Buclaw  <ibuclaw@gdcproject.org>

	* configure.in: Add asprintf and vasprintf to AC_CHECK_DECLS.
	* config.in, configure: Regenerate.

2015-07-27  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2015-07-27  Nick Clifton  <nickc@redhat.com>

	* elf32-msp430.c (uses_large_model): New function.
	(msp430_elf_eh_frame_address_size): New function.
	(elf_backend_eh_frame_address_size): Define.

2015-07-27  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR ld/18705
	* elfnn-aarch64.c (elf_backend_extern_protected_data): Define.

2015-07-27  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR ld/18705
	* elf32-arm.c (elf_backend_extern_protected_data): Define.

2015-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/18718
	* elflink.c (elf_link_output_extsym): Check symbol version